# intellicloud-consumer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: __init__.py  consumer.py  main.py  models.py  mongodb_client.py
