[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "intellicloud-consumer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies= [
"confluent-kafka>=2.2.0,<3.0.0",
"pymongo>=4.6.0,<5.0.0",
"pydantic>=2.5.0,<3.0.0"
]